--- a/src/components/labelsPanel/LabelsPanel.css
+++ b/src/components/labelsPanel/LabelsPanel.css
@@ -77,18 +77,17 @@
   z-index: -999;
 }
 
-.labels-panel_inner {
+.labels-panel__inner {
   display: flex;
   align-items: center;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 15px;
   padding-right: 65px;
-  width: fit-content;
   box-sizing: border-box;
   position: relative;
-  width: 100%;
   min-height: 50px;
+  width: 100%;
 }
 
 .labels-panel__label {
@@ -96,8 +95,12 @@
   transition: left 0.5s;
 }
 
-.labels-panel__label:not(:last-child) {
+.labels-panel__label {
   padding-right: 10px;
+}
+
+.labels-panel__label:last-child {
+  padding-right: 65px;
 }
 
 /* label transition */
